helm_demo/second_listing/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: apiIngress-service
spec: 
  rules:
    http:
      paths:
        - path: */api/v1/resources/books/all/
          pathType: Prefix
          backend: 
            serviceName: my-api-sevice
            serviceport: 7000
